--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.7",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
