--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.1",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "faker": "^5.1.0",
     "identity-obj-proxy": "^3.0.0",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.4",
