Create data generation script for CouchDB

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bluebird": "^3.7.2",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
+    "couchimport": "^1.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.0",
