--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "faker": "^5.1.0",
     "identity-obj-proxy": "^3.0.0",
     "mocha": "^8.2.0",
+    "newrelic": "^7.0.2",
     "nodemon": "^2.0.4",
     "nyc": "^15.1.0",
     "style-loader": "^2.0.0",
