Create initial Artillery tests for GET and POST routes

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lint": "eslint . --ext .js",
     "seed": "node --max-old-space-size=8192 database/seed.js",
     "test:server": "nyc mocha specs/server.js",
-    "test:client": "jest --coverage"
+    "test:client": "jest --coverage",
+    "artillery-get": "artillery run performance_test/GET-test.yml",
+    "artillery-post": "artillery run performance_test/POST-test.yml"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.12.1",
