--- a/performance_test/GET-test.yml
+++ b/performance_test/GET-test.yml
@@ -1,14 +1,38 @@
 config:
   target: "http://localhost:3002"
   phases:
+    - duration: 30
+      arrivalRate: 10
+      name: "Warm up"
     - duration: 60
-      arrivalRate: 1
-      name: "Baseline test with 1 user per second"
-  payload:
-    - path: "productId.csv"
-      fields:
-        - "productId"
-      order: sequence
+      arrivalRate: 10
+      rampTo: 100
+      name: "Ramp up"
+    - duration: 90
+      arrivalRate: 100
+      name: "Constant arrival"
+  variables:
+    productId:
+      - "10000000"
+      - "9340283"
+      - "9000000"
+      - "8239485"
+      - "8000000"
+      - "7849245"
+      - "7000000"
+      - "6483919"
+      - "6000000"
+      - "5329432"
+      - "5000000"
+      - "4329491"
+      - "4000000"
+      - "3653284"
+      - "3000000"
+      - "2453859"
+      - "2000000"
+      - "1452859"
+      - "1000000"
+      - "48296"
 scenarios:
   - name: "GET route"
     flow:
