--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "redis": "^3.0.2",
     "sinon": "^9.2.0"
   },
   "devDependencies": {
