Compress bundle with brotli and gzip

--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-react-css-modules": "^5.2.6",
     "bluebird": "^3.7.2",
+    "brotli-webpack-plugin": "^1.1.0",
     "chai": "^4.2.0",
+    "compression-webpack-plugin": "^4.0.1",
     "cors": "^2.8.5",
     "couchimport": "^1.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.1",
     "jest": "^26.6.0",
     "jquery": "^3.5.1",
     "mongodb": "^3.6.2",
